fix(#104): overflow of comments

--- a/src/module/WidescreenMode/widescreenMode.less
+++ b/src/module/WidescreenMode/widescreenMode.less
@@ -205,6 +205,7 @@ body[class] {
 
   .item-container-content {
     display: flex;
+    overflow: unset;
 
     &.right {
       flex-direction: row-reverse;
